envoyfilter-teaching/envoyfilter/cluster/cluster-outlier_detection.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cluster
  namespace: istio-system
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
    - applyTo: CLUSTER
      patch:
        operation: ADD
        value:
          name: productpage_cluster
          type: STRICT_DNS
          connect_timeout: 10s
          lb_policy: ROUND_ROBIN
          outlier_detection:
            consecutive_5xx: 5
            interval: 10s
            base_ejection_time: 30s
            max_ejection_percent: 10
            enforcing_consecutive_5xx: 100
            enforcing_success_rate: 100
            success_rate_minimum_hosts: 5
            success_rate_request_volume: 100
            success_rate_stdev_factor: 1900
            consecutive_gateway_failure: 5
            enforcing_consecutive_gateway_failure: 0
            split_external_local_origin_errors: true
            consecutive_local_origin_failure: 5
            enforcing_consecutive_local_origin_failure: 100
            enforcing_local_origin_success_rate: 100
            failure_percentage_threshold: 85
            enforcing_failure_percentage: 0
            enforcing_failure_percentage_local_origin: 0
            failure_percentage_minimum_hosts: 5
            failure_percentage_request_volume: 50
            max_ejection_time: 300s
          load_assignment:
            cluster_name: productpage_cluster
            endpoints:
            - lb_endpoints:
              - endpoint:
                  address:
                     socket_address:
                      address: productpage.istio.svc.cluster.local
                      port_value: 9080
